tests/src/snapshots/fe_compiler_tests__compile_errors__overflow_u128_neg.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: literal out of range for `u128`
  ┌─ [snippet]:3:8
  │
3 │   u128(-1)
  │        ^^ does not fit into type `u128`


